<resources>
    <string name="app_name">Nutrifish</string>
    <string name="nutrifish_logo">NutriFish Logo</string>
    <string name="welcome_to_nutrifish">Welcome to NutriFish</string>
    <string name="welcome_description">Discover Amazing Fish Around You!</string>
    <string name="register">Sign Up</string>
    <string name="login">Sign In</string>
    <string name="welcome_divider">Or</string>
    <string name="tv_login">Sign In</string>
    <string name="login_description">Sign In to your account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="loginGoogle">Sign In with Google</string>
    <string name="bt_login_register">Don’t have account yet? Register</string>
    <string name="tv_register">Sign Up</string>
    <string name="register_name">Name</string>
    <string name="register_username">Username</string>
    <string name="register_description">Let\'s create your account</string>
    <string name="bt_register_login">Already have account? Login</string>
    <string name="RegisterGoogle">Sign Up with Google</string>
    <string name="nutrifish">NutriFish</string>
    <string name="home_greetings">Hello, Welcome!</string>
    <string name="explore_fish">Explore Fish :</string>
    <string name="tv_explore_subtitle">Learn more about the characteristics and benefits of fish!</string>
    <string name="fish_placeholder">NutriFish</string>
    <string name="story_post">Post</string>
    <string name="post_subtitle">Learn more about other recipe posts!</string>
    <string name="recipe_title">Recipe Title</string>
    <string name="tv_recipe_title">Recipe Title</string>
    <string name="tv_recipe_username">Username</string>
    <string name="tv_recipe_dateCreated">Date Created</string>
    <string name="fab_analyze">Analyze button</string>
    <string name="image_placeholder">Image placeholder</string>
    <string name="bt_camera_text">Camera</string>
    <string name="bt_gallery_text">Gallery</string>
    <string name="fab_postRecipe">Post Recipe</string>
    <string name="placeholder_name">John Doe</string>
    <string name="placeholder_user_name">\@JohnDoe</string>
    <string name="myPost_title">My Posts</string>
    <string name="preview_image">preview image</string>
    <string name="upload">Upload</string>
    <string name="upload_recipe_title">Recipe Title</string>
    <string name="upload_recipe_descriptions">Recipe Descriptions</string>
    <string name="upload_recipe">Upload Recipe</string>
    <string name="invalid_email">Invalid Email</string>
    <string name="password_validate">Password must contain at least 8 characters</string>
    <string name="empty_email_field">Email field cannot be empty</string>
    <string name="empty_password_field">Password field cannot be empty</string>
    <string name="button_logout">button logout</string>
    <string name="image_classifier_failed">Image classifier failed to initialize. See error logs for details</string>
    <string name="model_not_found">Tflite model not found</string>
    <string name="nama_ikan">Nama ikan</string>
    <string name="description_body">isiDeskripsi</string>
    <string name="benefit_body">isiBenefit</string>
    <string name="benefit_title">Manfaat :</string>
    <string name="description_title">Deskripsi :</string>
    <string name="fish_images">Gambar Ikan</string>
    <string name="web_client">297202612550-hi8p73ot6spt0felvv87rgokllf2r3e1.apps.googleusercontent.com</string>
    <string name="logout_button_image">Logout Button</string>
    <string name="retry">Retry</string>
    <string name="error_request_timeout">Error: Request timeout</string>
    <string name="mypost_empty">Tidak ada post yang bisa ditampilkan</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="recipe_image">Gambar Resep</string>
    <string name="ingredients_and_steps">Bahan dan Cara Mengolah :</string>
    <string name="username_post">\@username</string>
    <string name="date_posted">Date Posted</string>
    <string name="isi_deskripsi">Isi......\n</string>
    <string name="Page_Title">Page Title\n</string>
    <string name="analyze">Analyze</string>
    <string name="back_button">back button</string>
</resources>