<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center"
    android:layout_marginStart="4dp"
    android:layout_marginEnd="4dp"
    android:layout_marginTop="4dp"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:id="@+id/card_frame"
        android:orientation="horizontal">
        <com.google.android.material.card.MaterialCardView
            android:layout_width="120dp"
            android:layout_marginEnd="8dp"
            android:layout_height="150dp">
            <ImageView
                android:id="@+id/iv_recipe_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/darkGreen"
                android:contentDescription="@string/preview_image"
                android:scaleType="centerCrop"
                tools:src="@drawable/placeholder_resep"/>
        </com.google.android.material.card.MaterialCardView>

        <LinearLayout
            android:id="@+id/text_frame"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:id="@+id/tv_recipe_title"
                android:layout_height="wrap_content"
                android:text="@string/tv_recipe_title"
                tools:text="Tuna Saus Padang"
                android:layout_marginBottom="4dp"
                android:textSize="24sp"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tv_recipe_username"
                tools:text="FattyTuna"
                android:textStyle="italic"
                android:textSize="14sp"
                android:id="@+id/tv_recipe_username"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:id="@+id/date_created"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="viewEnd"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    tools:text="Friday, 31 May 2024"
                    android:text="@string/tv_recipe_dateCreated"/>
            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>